infrastructure/base/apps/apicurio-registry/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apicurio-registry
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: apicurio-registry
